Copy Vertex Group To Selected fails when all Vertex Groups are empty. #38717

Closed
opened 2014-02-19 10:53:06 +01:00 by Terry Wallwork · 6 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender GIT Rev 2014-02-19-18-05-37-a6b8785
on a Fedora 20 Linux 64 Bit box with an Intel 3000 GFX

I noticed that if I try to use the "Copy Vertex Group To Selected" tool
on an object that has Vertex Groups but all those Vertex Groups are empty
unassigned the tool fails with an error:

  
  "Copy vertex groups to selected: 0 done, 1 failed (object data must have matching indices)"

In the attached Blend file I have to cubes, CubeA and CubeB. CubeA has 3 Vertex Groups but they
have no weight assigned to any of them. If I select CubeB then Shift select CubeA and navigate to
[Properties Editor > Object Data Context > Vertex Groups Panel > Tools List Button] and then
select Copy Vertex Group To Selected, the error is displayed.

If any of the Vertex Groups have weights assigned the tool works.

I have attached my system-info.txt and a demo Blend file and a video showing the issue.

system-info.txt

Copy_Vertex_Groups_To_Selected.blend

CopyVertexGroupToSelected.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT Rev 2014-02-19-18-05-37-a6b8785 on a Fedora 20 Linux 64 Bit box with an Intel 3000 GFX I noticed that if I try to use the "Copy Vertex Group To Selected" tool on an object that has Vertex Groups but all those Vertex Groups are empty unassigned the tool fails with an error: ``` "Copy vertex groups to selected: 0 done, 1 failed (object data must have matching indices)" ``` In the attached Blend file I have to cubes, CubeA and CubeB. CubeA has 3 Vertex Groups but they have no weight assigned to any of them. If I select CubeB then Shift select CubeA and navigate to [Properties Editor > Object Data Context > Vertex Groups Panel > Tools List Button] and then select Copy Vertex Group To Selected, the error is displayed. If any of the Vertex Groups have weights assigned the tool works. I have attached my system-info.txt and a demo Blend file and a video showing the issue. [system-info.txt](https://archive.blender.org/developer/F78063/system-info.txt) [Copy_Vertex_Groups_To_Selected.blend](https://archive.blender.org/developer/F78064/Copy_Vertex_Groups_To_Selected.blend) [CopyVertexGroupToSelected.webm](https://archive.blender.org/developer/F78065/CopyVertexGroupToSelected.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Campbell Barton self-assigned this 2014-02-19 14:17:35 +01:00

This issue was referenced by blender/blender-addons-contrib@a938640036

This issue was referenced by blender/blender-addons-contrib@a9386400365c3cdb7642e0879b152f5e3dee30ee

This issue was referenced by a938640036

This issue was referenced by a9386400365c3cdb7642e0879b152f5e3dee30ee
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit a938640036.

Closed by commit a938640036.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38717
No description provided.