Fix T38717: Copy Vertex Group To Selected fails when all Vertex Groups are empty.

This is now considered a no-op and counts as a successful copy (since
nothing would have changed anyway).